Contrast fixes

--- a/css/myentries.css
+++ b/css/myentries.css
@@ -36,12 +36,12 @@ h1 {
 }
 
 #mad {
-    background-color: red;
+    background-color: rgb(126, 0, 0);
     color: white;
 }
 
 #thankful {
-    background-color: rgb(214, 171, 0);
+    background-color: rgb(130, 109, 25);
     color: white;
 }
 
